got almost caught up